--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,7 @@ hunter_check_toolchain_definition(
     DEFINED x64_architecture
 )
 
+hunter_check_toolchain_definition(NAME "_DLL" DEFINED _hunter_vs_md)
+
 message("x64_architecture: ${x64_architecture}")
+message("vs_md: ${_hunter_vs_md}")
